# nvblox

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  blossom-development.jenkinsfile  release-notes.md
nvblox/: CMakeLists.txt
nvblox/examples/: CMakeLists.txt
nvblox/examples/src/: esdf_query.cu
nvblox/executables/: CMakeLists.txt
nvblox/executables/include/nvblox/datasets/: 3dmatch.h  data_loader.h  dataset_types.h  redwood.h  replica.h
nvblox/executables/include/nvblox/executables/: fuser.h
nvblox/executables/include/nvblox/gflags_param_loading/: fuser_params_from_gflags.h  mapper_params_from_gflags.h
nvblox/executables/src/: fuse_3dmatch.cpp  fuse_redwood.cpp  fuse_replica.cpp  fuser.cpp
nvblox/executables/src/datasets/: 3dmatch.cpp  redwood.cpp  replica.cpp
nvblox/experiments/: CMakeLists.txt
nvblox/include/nvblox/: nvblox.h
nvblox/include/nvblox/core/: bitmask.h  cuda_stream.h  hash.h  indexing.h  time.h  types.h  unified_ptr.h  unified_vector.h
nvblox/include/nvblox/core/internal/: error_check.h
nvblox/include/nvblox/dynamics/: dynamics_detection.h
nvblox/include/nvblox/experimental/ground_plane/: ground_plane_estimator.h  ground_plane_estimator_params.h  ransac_plane_fitter.h  ransac_plane_fitter_cpu.h  ransac_plane_fitter_params.h  tsdf_zero_crossings_extractor.h
nvblox/include/nvblox/geometry/: bounding_boxes.h  bounding_shape.h  bounding_spheres.h  plane.h  transforms.h  workspace_bounds.h
nvblox/include/nvblox/gpu_hash/: gpu_layer_view.h
nvblox/include/nvblox/integrators/: esdf_integrator.h  esdf_integrator_params.h  freespace_integrator.h  freespace_integrator_params.h  occupancy_decay_integrator.h  occupancy_decay_integrator_params.h  occupancy_integrator_params.h  projective_integrator_params.h  projective_occupancy_integrator.h  projective_tsdf_integrator.h  shape_clearer.h  tsdf_decay_integrator.h  tsdf_decay_integrator_params.h  view_calculator.h  view_calculator_params.h  viewpoint.h
nvblox/include/nvblox/integrators/internal/: decay_integrator_base.h  decay_integrator_base_params.h  decayer.h  integrators_common.h  projective_integrator.h
nvblox/include/nvblox/interpolation/: interpolation_2d.h
nvblox/include/nvblox/io/: csv.h  layer_cake_io.h  pointcloud_io.h
nvblox/include/nvblox/map/: blocks_to_update_tracker.h  blox.h  layer.h  layer_cake.h  voxel_iterator.h  voxels.h
nvblox/include/nvblox/map/internal/: block_memory_pool.h
nvblox/include/nvblox/map_saving/internal/: block_serialization.h  layer_serialization.h  (+2 more)
nvblox/include/nvblox/mapper/: mapper.h  mapper_params.h  multi_mapper.h  multi_mapper_params.h
nvblox/include/nvblox/mesh/: mesh.h  mesh_block.h  mesh_integrator.h  mesh_integrator_params.h
nvblox/include/nvblox/primitives/: primitives.h  scene.h
nvblox/include/nvblox/semantics/: image_masker.h  mask_from_detections.h
nvblox/include/nvblox/sensors/: camera.h  image.h  lidar.h  mask_preprocessor.h  pointcloud.h
nvblox/include/nvblox/serialization/: layer_cake_streamer.h  layer_serializer_gpu.h  layer_streamer.h  mesh_serializer_gpu.h
nvblox/include/nvblox/utils/: nvblox_art.h  nvtx_ranges.h  rates.h  timing.h
nvblox/src/core/: cuda_stream.cpp  error_check.cu
nvblox/src/dynamics/: dynamics_detection.cu
nvblox/src/experimental/ground_plane/: ground_plane_estimator.cpp  ransac_plane_fitter.cu  ransac_plane_fitter_cpu.cpp  tsdf_zero_crossings_extractor.cu
nvblox/src/geometry/: bounding_shape.cpp  bounding_spheres.cpp  transforms.cpp  workspace_bounds.cpp
nvblox/src/gpu_hash/: color_layer_specialization.cu  esdf_layer_specialization.cu  freespace_layer_specialization.cu  gpu_set.cu  mesh_layer_specialization.cu  occupancy_layer_specialization.cu  tsdf_layer_specialization.cu
nvblox/src/integrators/: esdf_integrator.cu  esdf_slicer.cu  freespace_integrator.cu  occupancy_decay_integrator.cu  projective_occupancy_integrator.cu  projective_tsdf_integrator.cu  shape_clearer.cu  tsdf_decay_integrator.cu  view_calculator.cu  viewpoint.cpp
nvblox/src/io/: layer_cake_io.cpp  mesh_io.cpp  pointcloud_io.cpp
nvblox/src/map/: blocks_to_update_tracker.cpp  blox.cu
nvblox/src/map_saving/: serializer.cpp
nvblox/src/mapper/: mapper.cpp  multi_mapper.cpp
nvblox/src/mesh/: mesh.cpp  mesh_block.cu  mesh_integrator.cu  mesh_integrator_color.cu
nvblox/src/primitives/: primitives.cpp  scene.cpp
nvblox/src/rays/: sphere_tracer.cu
nvblox/src/semantics/: image_masker.cu  mask_from_detections.cu
nvblox/src/sensors/: camera.cpp  image.cu  mask_preprocessor.cpp  pointcloud.cu
nvblox/src/serialization/: mesh_serializer_gpu.cu  serialization_gpu.cu
nvblox/src/utils/: nvblox_art.cpp  rates.cpp
nvblox/tests/: CMakeLists.txt  benchmark.cpp  check_default_stream_utilization.sh  regression_test_query_after_clear.cu  test_bitmask.cpp  test_blox.cpp  test_cake.cpp  test_color_image.cpp  test_cuda_stream.cpp  test_depth_image.cpp  test_device_function_utils.cu  test_dynamics.cpp  test_error_check.cu  test_esdf_integrator.cpp  test_esdf_integrator_slicing.cu  test_for_memory_leaks.cpp  test_freespace_integrator.cpp  test_frustum.cpp  test_fuser.cpp  test_gpu_hash_interface.cu  test_gpu_layer_view.cpp  test_image_masker.cpp  test_image_projector.cpp  test_image_view.cpp  test_indexing.cpp  test_layer.cpp  test_layer_cake_streamer.cpp  test_layer_streamer.cpp  test_lidar.cpp  test_lidar_integration.cpp  test_mapper.cpp  test_mapper_block_allocation.cpp  test_mask_from_detections.cpp  test_mask_preprocessor.cpp  test_masked_image_view.cu  test_mesh_coloring.cpp  test_mesh_serializer.cpp  test_mono_image.cpp  test_multi_mapper.cpp  test_npp_image_operations.cpp  (+18 more)
nvblox/tests/lib/: ransac_plane_fitter_utils.cpp  tsdf_zero_crossings_extractor_cpu.cpp  utils.cpp
nvblox/tests/lib/cuda/: blox_utils.cu  boolean_layer_specialization.cu  float_layer_specialization.cu  gpu_image_routines.cu  gpu_indexing.cu  gpu_layer_utils.cu  index_layer_specialization.cu  initialization_test_layer_specialization.cu  mesh_utils.cu  test_layer.cu  test_utils_cuda.cu
(+75 files in other folders)
